--- a/assets/models/Makefile
+++ b/assets/models/Makefile
@@ -2,7 +2,7 @@
 # Makefile for model, config data
 #
 usage:
-	@echo "usage: make [yolov3]"
+	@echo "usage: make [yolov3|yolov4|yolov5|yolo7]"
 
 model:
 	open https://sparsezoo.neuralmagic.com/
@@ -18,9 +18,14 @@ yolov4:
 yolov5:
 	open https://github.com/ultralytics/yolov5/releases
 
-yolov7:
-	wget https://raw.githubusercontent.com/AlexeyAB/darknet/master/cfg/yolov7-tiny.cfg
-	wget https://github.com/AlexeyAB/darknet/releases/download/yolov4/yolov7-tiny.weights
+yolov7-configs y7c:
+	wget https://github.com/WongKinYiu/yolov7/releases/download/v0.1/yolov7-tiny.weights
+	wget https://github.com/WongKinYiu/yolov7/releases/download/v0.1/yolov7.weights
+	wget https://github.com/WongKinYiu/yolov7/releases/download/v0.1/yolov7x.weights
+yolov7-weights y7w:
+	wget https://raw.githubusercontent.com/WongKinYiu/yolov7/darknet/cfg/yolov7-tiny.cfg
+	wget https://raw.githubusercontent.com/WongKinYiu/yolov7/darknet/cfg/yolov7.cfg
+	wget https://raw.githubusercontent.com/WongKinYiu/yolov7/darknet/cfg/yolov7x.cfg
 
 install i:
 	pip install yolov5
